--- a/Qomolangma/Qomolangma/Base.lproj/LaunchScreen.storyboard
+++ b/Qomolangma/Qomolangma/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,13 +26,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qNA-Sk-Uer" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="DW6-zo-0lP"/>
-                            <constraint firstAttribute="trailing" secondItem="qNA-Sk-Uer" secondAttribute="trailing" id="HJl-ai-aGv"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="qNA-Sk-Uer" secondAttribute="bottom" id="UGu-9u-8Sq"/>
-                            <constraint firstItem="qNA-Sk-Uer" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="sqs-Vb-z56"/>
+                            <constraint firstAttribute="trailing" secondItem="qNA-Sk-Uer" secondAttribute="trailing" id="3t9-YW-vI3"/>
+                            <constraint firstItem="qNA-Sk-Uer" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="KfF-YL-0iE"/>
+                            <constraint firstItem="qNA-Sk-Uer" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="dUr-WY-tKt"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="qNA-Sk-Uer" secondAttribute="bottom" id="qHF-3T-P4l"/>
                         </constraints>
                     </view>
-                    <nil key="simulatedStatusBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
